fixed overlapping error message on header bug

--- a/src/styles/components/_HeaderItems.scss
+++ b/src/styles/components/_HeaderItems.scss
@@ -3,8 +3,8 @@
     z-index:100;
     flex-direction:column;
     justify-content: flex-start;
-    width:256px;
-    max-width:256px;
+    width:500px;
+    max-width:500px;
     min-width:0px;
     position: fixed;
     top:0;
