--- a/src/styles/components/_LoginError.scss
+++ b/src/styles/components/_LoginError.scss
@@ -1,10 +1,26 @@
+
+.error_message{
+    width:90%;
+    padding:3px 0px 3px 0px;
+    background-color: rgb(161, 97, 97);
+    color:white;
+    transform: translateY(-30px);
+    border-bottom:1px solid red;
+    animation-name: error-popup;
+    animation-duration: 0.5s;
+    text-align:center;
+}
+
+
 .login_error{
     padding:10px 0px 10px 0px;
-    background-color: rgba(180, 109, 109,1);
+    background-color: rgb(180, 109, 109);
     color:white;
     animation-name: error-popup;
     animation-duration: 0.5s;
     text-align:center;
     border:2px solid red;
     box-sizing: border-box;
+    width:100%;
+    margin-top: 60px;
 }
