--- a/src/styles/components/_LoginForm.scss
+++ b/src/styles/components/_LoginForm.scss
@@ -62,19 +62,6 @@
     color:$text-color;
 }
 
-.error_message{
-    width:90%;
-    padding:3px 0px 3px 0px;
-    background-color: rgba(180, 109, 109,0.7);
-    color:white;
-    position: relative;
-    bottom:30px;
-    border-bottom:1px solid red;
-    animation-name: error-popup;
-    animation-duration: 0.5s;
-    text-align:center;
-}
-
 .submit_button{
     background-color: white;
     color:$theme-color;
