--- a/src/styles/components/_ToggleWrapper.scss
+++ b/src/styles/components/_ToggleWrapper.scss
@@ -9,5 +9,5 @@
 }
 
 .wrapper-unactive{
-    
+    padding:0.5px;
 }
